Fix SVG in nav and tables on high contrast

--- a/server/src/sass/components/_flood-levels-table.scss
+++ b/server/src/sass/components/_flood-levels-table.scss
@@ -179,6 +179,9 @@
       left: 4px;
       top: 4px;
       color: govuk-colour('black');
+      @media (forced-colors: active) {
+        color: currentColor;
+      }
       @include mq ($from: tablet) {
         left:6px;
         top: 6px;
